# queliaagent

./: Cargo.toml  test-config.toml  test-data.csv
.github/workflows/: build.yml
config/: agent.example.toml
releases/: agentquelia-macos-aarch64  install-generator.html  install.ps1  install.sh
scripts/: install-macos.sh  install-windows.ps1  install.sh
src/: cli.rs  error.rs  main.rs
src/config/: mod.rs  schema.rs
src/logging/: mod.rs
src/scheduler/: mod.rs
src/service/: linux.rs  macos.rs  windows.rs
src/sources/: csv_source.rs  http_source.rs  json_source.rs  mod.rs
src/transport/: mod.rs  retry.rs  supabase.rs
src/update/: checker.rs  mod.rs
tests/fixtures/: sample.csv  sample.json
